--- a/isItPrime/Base.lproj/Main.storyboard
+++ b/isItPrime/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Eg. 4, 8 or 29" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pFO-FC-hS9">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a number to see if it is prime." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pFO-FC-hS9">
                                 <rect key="frame" x="25" y="118" width="271" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -44,8 +44,11 @@
                                 <rect key="frame" x="107" y="192" width="106" height="33"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                 <state key="normal" title="Is it Prime?"/>
+                                <connections>
+                                    <action selector="primeBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4cN-0c-ah9"/>
+                                </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aS2-0C-XO7">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aS2-0C-XO7">
                                 <rect key="frame" x="16" y="233" width="288" height="95"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="95" id="jl6-lu-E3q"/>
@@ -74,6 +77,10 @@
                             <constraint firstItem="5Db-Mi-533" firstAttribute="top" secondItem="pFO-FC-hS9" secondAttribute="bottom" constant="44" id="vQH-mF-w5F"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="outPutLbl" destination="aS2-0C-XO7" id="r7X-P5-y2d"/>
+                        <outlet property="userText" destination="pFO-FC-hS9" id="nis-2Y-bpt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
